# RayMagic

./: .gitmodules  CMakeLists.txt  GenerateProjects.bat  LICENSE
assets/config/: imgui.ini
include/: RayMagic.h  pch.h
include/Core/: Application.h  Base.h  EditorLayer.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseCodes.h  Timer.h  Timestep.h  Window.h
include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
include/Imgui/: ImGuiLayer.h
include/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
include/RayTracing/: BVHTree.h  Camera.h  Material.h  Mesh.h  Random.h  Ray.h  RayTracingRenderer.h  Shape.h  SurfaceMaterial.h
include/Renderer/: Buffer.h  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
src/Core/: Application.cpp  EditorLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
src/Imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp
src/Platform/OpenGL/: OpenGLBuffer.cpp  (+6 more)
src/RayTracing/: BVHTree.cpp  Camera.cpp  Mesh.cpp  Random.cpp  RayTracingRenderer.cpp
src/Renderer/: Buffer.cpp  FrameBuffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
(+5 files in other folders)
